any months data can be converted to pdf, and added another report section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,40 @@
 <resources>
     <string name="app_name">Petty Cash</string>
+    <string name="month">Month</string>
+    <string name="sync">Get Data</string>
+    <string name="year">Year</string>
+    <string name="save_pdf">save as pdf</string>
+    <string name="category">Category</string>
+    <string name="budget">Budget(৳)</string>
+    <string name="expense">Expense(৳)</string>
+    <string name="balance">Balance(৳)</string>
+    <string-array name="month">
+        <item>January</item>
+        <item>February</item>
+        <item>March</item>
+        <item>April</item>
+        <item>May</item>
+        <item>June</item>
+        <item>July</item>
+        <item>August</item>
+        <item>September</item>
+        <item>October</item>
+        <item>November</item>
+        <item>December</item>
+    </string-array>
+    <string-array name="year">
+        <item>2015</item>
+        <item>2016</item>
+        <item>2017</item>
+        <item>2018</item>
+        <item>2019</item>
+        <item>2020</item>
+        <item>2021</item>
+        <item>2022</item>
+        <item>2023</item>
+        <item>2024</item>
+        <item>2025</item>
+        <item>2026</item>
+
+    </string-array>
 </resources>
